fix(wikipedia): increased contrast on clickable links in heading-title

--- a/styles/wikipedia/catppuccin.user.css
+++ b/styles/wikipedia/catppuccin.user.css
@@ -396,7 +396,7 @@
     }
 
     .mw-parser-output .mainpage-heading-title {
-      background: linear-gradient(to right,rgba(@accent-color, 0.4),@surface0) !important;
+      background: linear-gradient(to right,rgba(saturate(lighten(@accent-color, 4%), -3%), 0.4),@surface0) !important;
     }
 
     .hidden-title {
